--- a/style.css
+++ b/style.css
@@ -75,33 +75,27 @@ h1 span{
 	position:relative;
 }
 /* Footer Style */
-.footer{
-	position: absolute;
+footer{
+	position: fixed;
 	width:100%;
 	height:25px;
 	line-height:24px;
 	bottom:0px;
-	font-size:13px;
+	font-size:20px;
 	background:#000;
 	opacity:0.7;
 	text-transform:uppercase;
 	font-family: 'PT Sans Narrow', Arial, sans-serif;
 	z-index:4;
+	text-align:right;
 }
-.footer a{
-	padding:5px 10px;
+footer a{
+	text-align: right;
 	letter-spacing:1px;
 	text-shadow:1px 1px 1px #000;
 	color:#ddd;
-	text-align:right;
+	padding-right: 15px;
 }
-.footer a:hover{
+footer a:hover{
 	color:rgb(54,175,169);
-}
-.footer a span{
-	font-weight:bold;
-}
-.footer span.right_ab{
-	position:absolute;
-	right:4px;
 }
